# compiler_proj

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: AST.h.75B817A28F26BDA8.idx  Annotations.h.3224309682123CCB.idx  Calls.h.8F723F42C5D4020B.idx  Compiler.cpp.CFFE4387390DF5F6.idx  Compiler.h.848568BDEDE3A398.idx  Conditions.h.BC106914A90A1BA2.idx  Exp.cpp.46CDC8BF2022A460.idx  Exp.h.CC678521669935CA.idx  Functions.h.940D287887B807A0.idx  Lexer.cpp.58A12D94AB6CBA76.idx  LinkedList.h.C593965ADFB7FA5E.idx  Loops.h.0DB658CC45277AC7.idx  Parser.cpp.68CF101328AF4DF4.idx  Parser.h.A8136C8101F9ECBC.idx  ParsingContext.h.AE3EB2CC11C525A1.idx  Return.h.A0B2C124F33B5898.idx  Scopes.h.99D73C6232EEA0DF.idx  SysFunc.cpp.E6406825552EBD94.idx  SysFunc.h.703F0697E1894F87.idx  Var.cpp.A1473947C78B953A.idx  Var.h.AD8A2CF4176BE3D2.idx  Visitor.h.2FB5876E30894128.idx  annotationVisitor.cpp.83E8E3324AD14D27.idx  annotationVisitor.h.95BDC922844DF122.idx  commands_inc.h.2DDF290D2A23FCF9.idx  dataVisitor.cpp.77CC1F4E5C4F3BF9.idx  dataVisitor.h.14A12AF8FBACE559.idx  location.hh.B1907EE1764AF87A.idx  main.cpp.690695CD6FFF52D8.idx  semanticVisitor.cpp.6FED3B736CD6B7AE.idx  semanticVisitor.h.48C405BF5C765968.idx  structs.h.69D0C5790BB354D9.idx  textVisitor.cpp.0BAF8B35FB32D924.idx  textVisitor.h.00883F44090BD0BE.idx  (+1 more)
design/: syntax.asm  uml.drawio
inc/: AST.h  Annotations.h  Calls.h  Compiler.h  Conditions.h  Exp.h  Functions.h  LinkedList.h  Loops.h  ParsingContext.h  Return.h  Scopes.h  SysFunc.h  Var.h  Visitor.h  annotationVisitor.h  commands_inc.h  dataVisitor.h  semanticVisitor.h  structs.h  textVisitor.h  visitorRes.h
presentation/: 1_math_exp.sas  2_float_exp.sas  3_var_stuff.sas  4_control_flow.sas  5_functions.sas  fib.sas  swap.sas
src/: Calls.cpp  Compiler.cpp  Conditions.cpp  Exp.cpp  Functions.cpp  Lexer.lex  Parser.y  Return.cpp  Scopes.cpp  SysFunc.cpp  Var.cpp  annotationVisitor.cpp  dataVisitor.cpp  main.cpp  semanticVisitor.cpp  textVisitor.cpp
tests/: bool_out.sas  checkFile.py  cond_err.sas  cond_out.sas  exp_err.sas  exp_out.sas  init_err.sas  ptr_assign_err.sas  ptr_comp.sas  type_err.sas  var_name_err.sas
